<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    tools:context=".RegisterScreen">


    <!-- Logo -->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/logo"
        android:layout_marginBottom="24dp" />

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="8dp" />

    <!-- Subtitle -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fill_your_information_below"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp" />




    <!-- Name Field -->
    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/name_hint"
        android:background="@drawable/input_field"
        android:padding="12dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />
    <!-- Email Field -->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/gmail_com"
        android:background="@drawable/input_field"
        android:padding="12dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />
    <!-- Password Field -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:background="@drawable/input_field"
        android:padding="12dp"
        android:textSize="16sp"
        android:drawableEnd="@drawable/visibility_off_24px"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/txtConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password" />
    <!-- Password Field -->
    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:background="@drawable/input_field"
        android:padding="12dp"
        android:textSize="16sp"
        android:drawableEnd="@drawable/visibility_off_24px"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp" />

    <!-- Terms and Conditions -->
    <CheckBox
        android:id="@+id/cb_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_with_terms_conditions"
        android:textColor="#666666"
        android:layout_marginBottom="24dp" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/button"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:layout_marginStart="3dp"
            android:text="@string/sign_in" />
    </LinearLayout>

</LinearLayout>