<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:id="@+id/main"
    tools:context=".LoginScreen"
    >

    <!-- Logo -->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/logo"
        android:layout_marginBottom="24dp" />

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp" />

    <!-- Subtitle -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hi_welcome_back"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="60dp" />

    <!-- Email Field -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/gmail_com"
        android:background="@drawable/input_field"
        android:padding="12dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="20dp" />


    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:background="@drawable/input_field"
        android:padding="12dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"
        android:drawableEnd="@drawable/visibility_off_24px"/>

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginBottom="24dp" />

    <!-- Sign In Button -->
    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/button"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/sign_in"
        android:textColor="?attr/colorOnPrimary"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium" />

    <!-- Sign Up Option -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:layout_marginStart="3dp"
            android:text="@string/sign_up" />
    </LinearLayout>


</LinearLayout>
